--- a/readme.org
+++ b/readme.org
@@ -18,24 +18,33 @@
       ;;              :user "user@gmail.com"
       ;;              :pass "super_secret_pass"
       ;;              :ssl :yes}
+     
+      ;; :imap-creds ["imaps" "imap.gmail.com" "nurullah@nakkaya.com" "super_secret_pass"]
       
       :feed-list [["http://news.ycombinator.com/rss" 15 "3cdbbd1e-5559-45d5-8dd6-d60408301580"]
-                  ["http://www.reddit.com/r/programming/.rss" 15 "780e3966-547c-40a7-855b-23161ceee8d3"]]]
+                  ["http://www.reddit.com/r/programming/.rss" 15 "780e3966-547c-40a7-855b-23161ceee8d3"]
+                  ;; when using IMAP
+                  ;; ["http://news.ycombinator.com/rss" 15 ["feeds" "hackernews"]]
+                  ]]
    #+END_SRC
 
-   Above setup will inject mails to local sendmail process alternatively
-   you can use an SMTP server. *feed-list* is a list of vectors at the
-   very least it should contain a list of feed urls rest is
-   optional. Having the following structure,
+   Above setup will inject mails to local sendmail process
+   alternatively you can use an SMTP server or you can provide IMAP
+   credentials then message will be placed in folder/s. *feed-list*
+   is a list of vectors at the very least it should contain a list of
+   feed URLs rest is optional. Having the following structure,
 
    #+BEGIN_EXAMPLE
      [url freq id name]
    #+END_EXAMPLE
 
    - url - URL of the feed.
-   - freq - How often we should check the URL (Defaults to 60 mins)
+   - freq - Optional. How often we should check the URL (Defaults to 60 mins)
    - id - Optional string that will be appended to the email in *white*
-     which allows you to create filters looking for that text.
+     which allows you to create filters looking for that text or a
+     vector of folder names defining a folder hierarchy entries should be
+     placed in when using /IMAP/. ex. ["Feeds" "Feed"] will place the
+     entries into the /Feed/ folder under /Feeds/ folder.
    - name - Optional name that will override the name for the feed.
 
 ** License
